fix: fixed mobile layout issues with media queries

--- a/index.css
+++ b/index.css
@@ -1,11 +1,15 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   background-color: #202020;
   color: white;
-  margin-left: 100px;
+  margin: 0 auto;
+  padding: 0 16px;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -45,9 +49,10 @@ p {
 /* Media Queries */
 
 @media (max-width: 800px) {
-body {
-    margin-left: 20px;
-}
+  body {
+    margin: 0 auto;
+    padding: 0 16px;
+  }
 
   .heading--main {
     width: 400px;
@@ -69,5 +74,39 @@ body {
   p {
     font-size: 20px;
     line-height: 2rem;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    margin: 0px auto;
+    padding: 0 16px;
+  }
+
+  .heading--main {
+    width: 250px;
+    height: 60px;
+    left: 20px;
+    top: 40px;
+  }
+
+  .paragraph--main {
+    width: 290px;
+    padding: 40px 30px 10px;
+  }
+
+  h1 {
+    font-size: 20px;
+    padding-top: 13px;
+    text-align: center;
+  }
+
+  p {
+    font-size: 10px;
+    line-height: 1rem;
+  }
+
+  br {
+    display: none;
   }
 }
